--- a/.github/workflows/allure.yml
+++ b/.github/workflows/allure.yml
@@ -5,25 +5,27 @@ on:
       - main
 jobs:
   Allure:
-    - name: Checkout git repository
-      uses: actions/checkout@v3
-    - name: Install additional Ubuntu packages
-      uses: awalsh128/cache-apt-pkgs-action@latest
-      with:
-        packages: allure
-        version: 'ubuntu'
-    - name: Get Allure reports history
-      run: cp -R ./docs/history/ ./allure/history && exit 0
-    - name: Build Allure reports
-      run: allure generate ./allure -o ./doc
-    - name: Commit static site to repository with GitHub Pages enabled
-      uses: cpina/github-action-push-to-another-repository@main
-      env:
-        API_TOKEN_GITHUB: ${{ secrets.API_TESTEREMBYC_PL_DEPLOY_TOKEN }}
-      with:
-        user-name: "mkusz"
-        user-email: 9740637+mkusz@users.noreply.github.com
-        source-directory: "docs"
-        destination-github-username: "mkusz"
-        destination-repository-name: "test-sub"
-        target-branch: report
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout git repository
+        uses: actions/checkout@v3
+      - name: Install additional Ubuntu packages
+        uses: awalsh128/cache-apt-pkgs-action@latest
+        with:
+          packages: allure
+          version: 'ubuntu'
+      - name: Get Allure reports history
+        run: cp -R ./docs/history/ ./allure/history && exit 0
+      - name: Build Allure reports
+        run: allure generate ./allure -o ./doc
+      - name: Commit static site to repository with GitHub Pages enabled
+        uses: cpina/github-action-push-to-another-repository@main
+        env:
+          API_TOKEN_GITHUB: ${{ secrets.API_TESTEREMBYC_PL_DEPLOY_TOKEN }}
+        with:
+          user-name: "mkusz"
+          user-email: 9740637+mkusz@users.noreply.github.com
+          source-directory: "docs"
+          destination-github-username: "mkusz"
+          destination-repository-name: "test-sub"
+          target-branch: report
