--- a/.github/workflows/allure.yml
+++ b/.github/workflows/allure.yml
@@ -9,13 +9,19 @@ jobs:
     steps:
       - name: Checkout git repository
         uses: actions/checkout@v3
+      - name: Checkout files
+      - uses: Bhacaz/checkout-files@v2
+        files: docs
+        with:
+          branch: report
       - name: Install additional Ubuntu packages
         uses: awalsh128/cache-apt-pkgs-action@latest
         with:
           packages: allure
           version: 'ubuntu'
       - name: Get Allure reports history
-        run: cp -R ./docs/history/ ./allure/history && exit 0
+      
+        run: cp -R ./docs/history/ ./allure/history 2>/dev/null
       - name: Build Allure reports
         run: allure generate ./allure -o ./doc
       - name: Commit static site to repository with GitHub Pages enabled
@@ -23,9 +29,10 @@ jobs:
         env:
           API_TOKEN_GITHUB: ${{ secrets.API_TESTEREMBYC_PL_DEPLOY_TOKEN }}
         with:
-          user-name: "mkusz"
+          user-name: mkusz
           user-email: 9740637+mkusz@users.noreply.github.com
-          source-directory: "docs"
-          destination-github-username: "mkusz"
-          destination-repository-name: "test-sub"
+          source-directory: docs
+          target_directory: docs
+          destination-github-username: mkusz
+          destination-repository-name: test-sub
           target-branch: report
