--- a/.github/workflows/allure.yml
+++ b/.github/workflows/allure.yml
@@ -10,9 +10,9 @@ jobs:
       - name: Checkout git repository
         uses: actions/checkout@v3
       - name: Checkout files
-      - uses: Bhacaz/checkout-files@v2
-        files: docs
+        uses: Bhacaz/checkout-files@v2
         with:
+          files: docs
           branch: report
       - name: Install additional Ubuntu packages
         uses: awalsh128/cache-apt-pkgs-action@latest
@@ -20,7 +20,6 @@ jobs:
           packages: allure
           version: 'ubuntu'
       - name: Get Allure reports history
-      
         run: cp -R ./docs/history/ ./allure/history 2>/dev/null
       - name: Build Allure reports
         run: allure generate ./allure -o ./doc
