--- a/.github/workflows/allure.yml
+++ b/.github/workflows/allure.yml
@@ -9,29 +9,59 @@ jobs:
     steps:
       - name: Checkout git repository
         uses: actions/checkout@v3
-      - name: Checkout files
-        uses: Bhacaz/checkout-files@v2
+      
+      - name: Get Allure history
+        uses: actions/checkout@v3
+        if: always()
+        continue-on-error: true
         with:
-          files: docs
-          branch: report
-      - name: Install additional Ubuntu packages
-        uses: awalsh128/cache-apt-pkgs-action@latest
+          ref: report
+          path: docs
+      - name: Allure Report action from marketplace
+        uses: simple-elf/allure-report-action@master
+        if: always()
+        #id: allure-report
         with:
-          packages: allure
-          version: 'ubuntu'
-      - name: Get Allure reports history
-        run: cp -R ./docs/history/ ./allure/history || echo
-      - name: Build Allure reports
-        run: allure generate ./allure -o ./doc
-      - name: Commit static site to repository with GitHub Pages enabled
-        uses: cpina/github-action-push-to-another-repository@main
+          allure_results: allure
+          gh_pages: docs
+          allure_report: report
+          allure_history: history
+          keep_reports: 100
+      - name: Deploy report to Github Pages
+        if: always()
+        uses: peaceiris/actions-gh-pages@v2
         env:
-          API_TOKEN_GITHUB: ${{ secrets.API_TESTEREMBYC_PL_DEPLOY_TOKEN }}
-        with:
-          user-name: mkusz
-          user-email: 9740637+mkusz@users.noreply.github.com
-          source-directory: docs
-          target_directory: docs
-          destination-github-username: mkusz
-          destination-repository-name: test-sub
-          target-branch: report
+          PERSONAL_TOKEN: ${{ secrets.API_TESTEREMBYC_PL_DEPLOY_TOKEN }}
+          PUBLISH_BRANCH: report
+          PUBLISH_DIR: history
+      - name: Post the link to the report
+        if: always()
+        uses: Sibz/github-status-action@v1
+        with: 
+            authToken: ${{secrets.GITHUB_TOKEN}}
+            context: 'Test report'
+            state: 'success'
+            sha: ${{ github.event.pull_request.head.sha }}
+            target_url: github.com/mkusz/test-sub/${{ github.run_number }}
+      
+#       - name: Install additional Ubuntu packages
+#         uses: awalsh128/cache-apt-pkgs-action@latest
+#         with:
+#           packages: allure
+#           version: 'ubuntu'
+#       - name: Get Allure reports history
+#         run: cp -R ./docs/history/ ./allure/history || echo
+#       - name: Build Allure reports
+#         run: allure generate ./allure -o ./doc
+#       - name: Commit static site to repository with GitHub Pages enabled
+#         uses: cpina/github-action-push-to-another-repository@main
+#         env:
+#           API_TOKEN_GITHUB: ${{ secrets.API_TESTEREMBYC_PL_DEPLOY_TOKEN }}
+#         with:
+#           user-name: mkusz
+#           user-email: 9740637+mkusz@users.noreply.github.com
+#           source-directory: docs
+#           target_directory: docs
+#           destination-github-username: mkusz
+#           destination-repository-name: test-sub
+#           target-branch: report
