--- a/.github/workflows/allure.yml
+++ b/.github/workflows/allure.yml
@@ -1,5 +1,6 @@
 name: Allure
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
@@ -7,42 +8,46 @@ jobs:
   Allure:
     runs-on: ubuntu-latest
     steps:
+      - name: Install Allure
+        run: apt-add-repository ppa:qameta/allure && apt-get update && apt-get install -y allure
       - name: Checkout git repository
         uses: actions/checkout@v3
-      
       - name: Get Allure history
         uses: actions/checkout@v3
         if: always()
         continue-on-error: true
         with:
           ref: report
-          path: docs
-      - name: Allure Report action from marketplace
-        uses: simple-elf/allure-report-action@master
-        if: always()
-        #id: allure-report
-        with:
-          allure_results: allure
-          gh_pages: docs
-          allure_report: report
-          allure_history: history
-          keep_reports: 100
-      - name: Deploy report to Github Pages
-        if: always()
-        uses: peaceiris/actions-gh-pages@v2
-        env:
-          PERSONAL_TOKEN: ${{ secrets.API_TESTEREMBYC_PL_DEPLOY_TOKEN }}
-          PUBLISH_BRANCH: report
-          PUBLISH_DIR: history
-      - name: Post the link to the report
-        if: always()
-        uses: Sibz/github-status-action@v1
-        with: 
-            authToken: ${{secrets.GITHUB_TOKEN}}
-            context: 'Test report'
-            state: 'success'
-            sha: ${{ github.event.pull_request.head.sha }}
-            target_url: github.com/mkusz/test-sub/${{ github.run_number }}
+          path: _allure_old
+      - name: Get Allure reports history
+        run: cp -R ./docs/history/ ./allure/history || echo
+        
+#       - name: Allure Report action from marketplace
+#         uses: simple-elf/allure-report-action@master
+#         if: always()
+#         #id: allure-report
+#         with:
+#           allure_results: allure
+#           gh_pages: docs
+#           allure_report: report
+#           allure_history: history
+#           keep_reports: 100
+#       - name: Deploy report to Github Pages
+#         if: always()
+#         uses: peaceiris/actions-gh-pages@v2
+#         env:
+#           PERSONAL_TOKEN: ${{ secrets.API_TESTEREMBYC_PL_DEPLOY_TOKEN }}
+#           PUBLISH_BRANCH: report
+#           PUBLISH_DIR: history
+#       - name: Post the link to the report
+#         if: always()
+#         uses: Sibz/github-status-action@v1
+#         with: 
+#             authToken: ${{secrets.GITHUB_TOKEN}}
+#             context: 'Test report'
+#             state: 'success'
+#             sha: ${{ github.event.pull_request.head.sha }}
+#             target_url: github.com/mkusz/test-sub/${{ github.run_number }}
       
 #       - name: Install additional Ubuntu packages
 #         uses: awalsh128/cache-apt-pkgs-action@latest
