--- a/.github/workflows/allure.yml
+++ b/.github/workflows/allure.yml
@@ -9,7 +9,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Install Allure
-        run: sudo apt-add-repository ppa:qameta/allure && sudo apt-get update && sudo apt-get install -y allure
+        run: |
+          curl -o allure-2.22.1.tgz -OLs https://repo.maven.apache.org/maven2/io/qameta/allure/allure-commandline/2.13.8/allure-commandline-2.13.8.tgz
+          sudo tar -zxvf allure-2.22.1.tgz -C /opt/
+          sudo ln -s /opt/allure-2.22.1/bin/allure /usr/bin/allure
+          allure --version
       - name: Checkout git repository
         uses: actions/checkout@v3
       - name: Get Allure history
