--- a/.github/workflows/allure.yml
+++ b/.github/workflows/allure.yml
@@ -12,8 +12,9 @@ jobs:
         run: |
           curl -o allure-2.22.1.tgz -OLs https://repo.maven.apache.org/maven2/io/qameta/allure/allure-commandline/2.13.8/allure-commandline-2.13.8.tgz
           sudo tar -zxvf allure-2.22.1.tgz -C /opt/
-          sudo ln -s /opt/allure-2.22.1/bin/allure /usr/bin/allure
-          allure --version
+          sudo ln -s /opt/allure-2.22.1/bin/allure ./allure
+          ls -la
+          ./allure --version
       - name: Checkout git repository
         uses: actions/checkout@v3
       - name: Get Allure history
