--- a/.github/workflows/allure.yml
+++ b/.github/workflows/allure.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   Allure:
     runs-on: ubuntu-latest
+    name: Generate Allure report
     steps:
       - name: Install Allure
         run: |
@@ -41,7 +42,7 @@ jobs:
       - name: Commit static site to repository with GitHub Pages enabled
         uses: cpina/github-action-push-to-another-repository@main
         env:
-          API_TOKEN_GITHUB: ${{ secrets.API_TESTEREMBYC_PL_DEPLOY_TOKEN }}
+          API_TOKEN_GITHUB: ${{ secrets.GITHUB_TOKEN }}
         with:
           user-name: mkusz
           user-email: 9740637+mkusz@users.noreply.github.com
