--- a/.github/workflows/allure.yml
+++ b/.github/workflows/allure.yml
@@ -45,9 +45,9 @@ jobs:
         uses: EndBug/add-and-commit@v9
         with:
           default_author: github_actions
-          cwd: /docs
+          add: 'docs'
           message: Update Allure report
-          new_branch: report
+          push: "origin report --set-upstream --force"
       
       - name: Close pull request and delete its branch
         uses: peter-evans/close-pull@v3
