--- a/.github/workflows/allure.yml
+++ b/.github/workflows/allure.yml
@@ -45,7 +45,8 @@ jobs:
         uses: EndBug/add-and-commit@v9
         with:
           default_author: github_actions
-          add: 'docs'
+          add: .
+          cwd: ./docs/
           message: Update Allure report
           push: "origin report --set-upstream --force"
       
