--- a/.github/workflows/allure.yml
+++ b/.github/workflows/allure.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Checkout git repository
         uses: actions/checkout@v3
         with:
-          path: ./report
+          path: "./report/"
 
       - name: Get Allure history
         uses: actions/checkout@v3
@@ -33,7 +33,7 @@ jobs:
         continue-on-error: true
         with:
           ref: report
-          path: ./docs
+          path: "./docs/"
 
       - name: Get Allure reports history
         run: cp -R ./docs/history/ ./report/history || echo
@@ -45,8 +45,8 @@ jobs:
         uses: EndBug/add-and-commit@v9
         with:
           default_author: github_actions
-          add: .
-          cwd: ./docs/
+          add: "."
+          cwd: "./docs/"
           message: Update Allure report
           push: "origin report --set-upstream --force"
       
