--- a/.github/workflows/allure.yml
+++ b/.github/workflows/allure.yml
@@ -34,6 +34,12 @@ jobs:
         with:
           ref: report
           path: "./docs/"
+      
+      - name: Check report folder
+        run: ls -al ./report/
+
+      - name: Check docs folder
+        run: ls -al ./docs/
 
       - name: Get Allure reports history
         run: cp -R ./docs/history/ ./report/history || echo
@@ -41,6 +47,12 @@ jobs:
       - name: Build Allure reports
         run: ./allure generate ./report -o ./docs --clean
       
+      - name: Check report folder
+        run: ls -al ./report/
+
+      - name: Check docs folder
+        run: ls -al ./docs/
+
       - name: Commit static site to repository with GitHub Pages enabled
         uses: EndBug/add-and-commit@v9
         with:
