--- a/.github/workflows/allure.yml
+++ b/.github/workflows/allure.yml
@@ -52,7 +52,7 @@ jobs:
 
       - name: Build Allure reports and copy .git
         run: |
-          ./allure generate ./report -o ./docs
+          ./allure generate ./report -o ./docs --clean
           cp -R ./temp/.git/ ./report/
       
       - name: Check report folder
