Fix for cd to report

--- a/.github/workflows/allure.yml
+++ b/.github/workflows/allure.yml
@@ -61,6 +61,6 @@ jobs:
         run: ls -la && ls -la ./docs/ && ls -la ./report/
 
       - name: Close pull request and delete its branch
-        run: cd ./reports/ && gh pr close --comment "Allure report generated (auto closing PR)" --delete-branch "${{ github.event.number }}"
+        run: cd ./report/ && gh pr close --comment "Allure report generated (auto closing PR)" --delete-branch "${{ github.event.number }}"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
